--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 pandas
 scikit-learn
+
+python version - 3.10.11
+
+pytorch  version - 2.4.0, cuda version - 12.4
+( install pytorch from website, it also installs torchaudio, torchvision, numpy and pillow )
